Issue #16980: Fix processing of escaped non-ascii bytes in the unicode-escape-decode decoder.